# zephyr-audio-analyzer

./: .gitignore  CMakeLists.txt  README.rst  prj.conf  tests.yaml  west.yml
.github/workflows/: build.yml
boards/: lp_mspm0g3507.overlay
src/: main.c
src/features/: audio_config.h
src/features/audio_analysis/: audio_analysis.c  audio_analysis.h
src/features/audio_capture/: audio_capture.c  audio_capture.h
src/features/audio_input/: audio_input.c  audio_input.h
src/features/audio_input/audio_stream_mic/: audio_stream_mic.c  audio_stream_mic.h
src/features/audio_input/audio_stream_uart/: audio_stream_uart.c  audio_stream_uart.h
src/features/audio_input_control/: audio_input_control.c  audio_input_control.h
src/features/audio_passthrough/: audio_passthrough.c  audio_passthrough.h
src/features/audio_playback/: audio_playback.c  audio_playback.h
src/features/display_msg/: display_msg.c  display_msg.h
src/features/display_spectrum/: display_spectrum.c  display_spectrum.h
src/features/display_spectrum/spectrum_scaling/: spectrum_scaling.c  spectrum_scaling.h
src/features/display_startup/: display_startup.c  display_startup.h
